[gd_scene load_steps=23 format=2]

[ext_resource path="res://toolbar_button_group.tres" type="ButtonGroup" id=1]
[ext_resource path="res://assets/buttons/library_hover.png" type="Texture" id=2]
[ext_resource path="res://assets/buttons/museum_hover.png" type="Texture" id=4]
[ext_resource path="res://assets/buttons/museum_normal.png" type="Texture" id=6]
[ext_resource path="res://assets/buttons/library_normal.png" type="Texture" id=14]
[ext_resource path="res://assets/buttons/museum_active.png" type="Texture" id=15]
[ext_resource path="res://assets/buttons/library_active.png" type="Texture" id=17]
[ext_resource path="res://assets/buttons/park_hover.png" type="Texture" id=20]
[ext_resource path="res://assets/buttons/park_active.png" type="Texture" id=22]
[ext_resource path="res://assets/buttons/park_normal.png" type="Texture" id=26]
[ext_resource path="res://assets/buttons/school_normal.png" type="Texture" id=32]
[ext_resource path="res://assets/buttons/tide_sensor_normal.png" type="Texture" id=34]
[ext_resource path="res://assets/buttons/tide_sensor_active.png" type="Texture" id=43]
[ext_resource path="res://assets/buttons/tide_sensor_hover.png" type="Texture" id=49]
[ext_resource path="res://assets/fonts/toolbarTitle.tres" type="DynamicFont" id=54]
[ext_resource path="res://assets/buttons/school_active.png" type="Texture" id=55]
[ext_resource path="res://assets/buttons/school_hover.png" type="Texture" id=56]
[ext_resource path="res://assets/fonts/Ubuntu-Bold.ttf" type="DynamicFontData" id=57]
[ext_resource path="res://assets/fonts/Ubuntu-Regular.ttf" type="DynamicFontData" id=58]
[ext_resource path="res://scripts/ToolsMenu.gd" type="Script" id=59]

[sub_resource type="DynamicFont" id=1]
size = 18
font_data = ExtResource( 57 )

[sub_resource type="DynamicFont" id=2]
size = 12
font_data = ExtResource( 58 )

[node name="ToolsMenu" type="ScrollContainer"]
margin_top = 42.0
margin_right = 162.0
margin_bottom = 717.0
script = ExtResource( 59 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_right = 150.0
margin_bottom = 30.0
custom_constants/separation = 0

[node name="ToolbarTitle" type="ColorRect" parent="VBoxContainer"]
margin_right = 150.0
margin_bottom = 30.0
rect_min_size = Vector2( 150, 30 )
color = Color( 0, 0, 0, 0 )

[node name="Tools" type="Label" parent="VBoxContainer/ToolbarTitle"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 150, 30 )
custom_fonts/font = SubResource( 1 )
text = "Tools"
align = 1
valign = 1

[node name="Public Services" type="ColorRect" parent="VBoxContainer"]
visible = false
margin_top = 30.0
margin_right = 150.0
margin_bottom = 195.0
rect_min_size = Vector2( 150, 165 )
color = Color( 0.431373, 0.458824, 0.517647, 0.321569 )

[node name="Title" type="Label" parent="VBoxContainer/Public Services"]
margin_top = 3.0
margin_right = 150.0
margin_bottom = 23.0
rect_min_size = Vector2( 150, 20 )
custom_fonts/font = ExtResource( 54 )
text = "Public Services"
align = 1
valign = 1

[node name="park_button" type="TextureButton" parent="VBoxContainer/Public Services"]
margin_left = 20.66
margin_top = 27.0
margin_right = 64.66
margin_bottom = 67.0
hint_tooltip = "Road/Power Tile"
toggle_mode = true
keep_pressed_outside = true
group = ExtResource( 1 )
texture_normal = ExtResource( 26 )
texture_pressed = ExtResource( 22 )
texture_hover = ExtResource( 20 )
texture_focused = ExtResource( 22 )

[node name="Label" type="Label" parent="VBoxContainer/Public Services/park_button"]
margin_left = -20.0
margin_top = 40.0
margin_right = 64.0
margin_bottom = 60.0
custom_fonts/font = SubResource( 2 )
text = "Park"
align = 1
valign = 1

[node name="BG" type="ColorRect" parent="VBoxContainer/Public Services/park_button"]
margin_left = 35.0
margin_top = 25.0
margin_right = 55.0
margin_bottom = 45.0
color = Color( 0, 0, 0, 1 )

[node name="Amount" type="Label" parent="VBoxContainer/Public Services/park_button/BG"]
margin_right = 20.0
margin_bottom = 20.0
text = "99"
align = 1
valign = 1

[node name="library_button" type="TextureButton" parent="VBoxContainer/Public Services"]
margin_left = 85.32
margin_top = 27.0
margin_right = 129.32
margin_bottom = 70.0
hint_tooltip = "Road/Power Tile"
toggle_mode = true
keep_pressed_outside = true
group = ExtResource( 1 )
texture_normal = ExtResource( 14 )
texture_pressed = ExtResource( 17 )
texture_hover = ExtResource( 2 )
texture_focused = ExtResource( 17 )

[node name="Label" type="Label" parent="VBoxContainer/Public Services/library_button"]
margin_left = -20.0
margin_top = 40.0
margin_right = 64.0
margin_bottom = 60.0
custom_fonts/font = SubResource( 2 )
text = "Library"
align = 1
valign = 1

[node name="BG" type="ColorRect" parent="VBoxContainer/Public Services/library_button"]
margin_left = 35.0
margin_top = 25.0
margin_right = 55.0
margin_bottom = 45.0
color = Color( 0, 0, 0, 1 )

[node name="Amount" type="Label" parent="VBoxContainer/Public Services/library_button/BG"]
margin_right = 20.0
margin_bottom = 20.0
text = "99"
align = 1
valign = 1

[node name="museum_button" type="TextureButton" parent="VBoxContainer/Public Services"]
margin_left = 20.66
margin_top = 96.0
margin_right = 64.66
margin_bottom = 139.0
hint_tooltip = "Road/Power Tile"
toggle_mode = true
keep_pressed_outside = true
group = ExtResource( 1 )
texture_normal = ExtResource( 6 )
texture_pressed = ExtResource( 15 )
texture_hover = ExtResource( 4 )
texture_focused = ExtResource( 15 )

[node name="Label" type="Label" parent="VBoxContainer/Public Services/museum_button"]
margin_left = -20.0
margin_top = 40.0
margin_right = 64.0
margin_bottom = 60.0
custom_fonts/font = SubResource( 2 )
text = "Museum"
align = 1
valign = 1

[node name="BG" type="ColorRect" parent="VBoxContainer/Public Services/museum_button"]
margin_left = 35.0
margin_top = 25.0
margin_right = 55.0
margin_bottom = 45.0
color = Color( 0, 0, 0, 1 )

[node name="Amount" type="Label" parent="VBoxContainer/Public Services/museum_button/BG"]
margin_right = 20.0
margin_bottom = 20.0
text = "99"
align = 1
valign = 1

[node name="school_button" type="TextureButton" parent="VBoxContainer/Public Services"]
margin_left = 85.32
margin_top = 96.0
margin_right = 129.32
margin_bottom = 139.0
hint_tooltip = "Road/Power Tile"
toggle_mode = true
keep_pressed_outside = true
group = ExtResource( 1 )
texture_normal = ExtResource( 32 )
texture_pressed = ExtResource( 55 )
texture_hover = ExtResource( 56 )
texture_focused = ExtResource( 55 )

[node name="Label" type="Label" parent="VBoxContainer/Public Services/school_button"]
margin_left = -20.0
margin_top = 40.0
margin_right = 64.0
margin_bottom = 60.0
custom_fonts/font = SubResource( 2 )
text = "School"
align = 1
valign = 1

[node name="BG" type="ColorRect" parent="VBoxContainer/Public Services/school_button"]
margin_left = 35.0
margin_top = 25.0
margin_right = 55.0
margin_bottom = 45.0
color = Color( 0, 0, 0, 1 )

[node name="Amount" type="Label" parent="VBoxContainer/Public Services/school_button/BG"]
margin_right = 20.0
margin_bottom = 20.0
text = "99"
align = 1
valign = 1

[node name="Sensors" type="ColorRect" parent="VBoxContainer"]
visible = false
margin_top = 30.0
margin_right = 150.0
margin_bottom = 120.0
rect_min_size = Vector2( 150, 90 )
color = Color( 0.235294, 0.235294, 0.235294, 0.878431 )

[node name="Title" type="Label" parent="VBoxContainer/Sensors"]
margin_top = 3.0
margin_right = 150.0
margin_bottom = 23.0
rect_min_size = Vector2( 150, 20 )
custom_fonts/font = ExtResource( 54 )
text = "Sensors"
align = 1
valign = 1

[node name="tide_sensor_button" type="TextureButton" parent="VBoxContainer/Sensors"]
margin_left = 20.66
margin_top = 27.0
margin_right = 64.66
margin_bottom = 67.0
hint_tooltip = "Road/Power Tile"
toggle_mode = true
keep_pressed_outside = true
group = ExtResource( 1 )
texture_normal = ExtResource( 34 )
texture_pressed = ExtResource( 43 )
texture_hover = ExtResource( 49 )
texture_focused = ExtResource( 43 )

[node name="Label" type="Label" parent="VBoxContainer/Sensors/tide_sensor_button"]
margin_left = -20.0
margin_top = 40.0
margin_right = 64.0
margin_bottom = 60.0
custom_fonts/font = SubResource( 2 )
text = "Tide Sensor"
align = 1
valign = 1

[node name="BG" type="ColorRect" parent="VBoxContainer/Sensors/tide_sensor_button"]
margin_left = 35.0
margin_top = 25.0
margin_right = 55.0
margin_bottom = 45.0
color = Color( 0, 0, 0, 1 )

[node name="Amount" type="Label" parent="VBoxContainer/Sensors/tide_sensor_button/BG"]
margin_right = 20.0
margin_bottom = 20.0
text = "99"
align = 1
valign = 1

[node name="rain_sensor_button" type="TextureButton" parent="VBoxContainer/Sensors"]
margin_left = 85.32
margin_top = 27.0
margin_right = 129.32
margin_bottom = 70.0
hint_tooltip = "Road/Power Tile"
toggle_mode = true
keep_pressed_outside = true
group = ExtResource( 1 )
texture_normal = ExtResource( 14 )
texture_pressed = ExtResource( 17 )
texture_hover = ExtResource( 2 )
texture_focused = ExtResource( 17 )

[node name="Label" type="Label" parent="VBoxContainer/Sensors/rain_sensor_button"]
margin_left = -20.0
margin_top = 40.0
margin_right = 64.0
margin_bottom = 60.0
custom_fonts/font = SubResource( 2 )
text = "Rain Sensor"
align = 1
valign = 1

[node name="BG" type="ColorRect" parent="VBoxContainer/Sensors/rain_sensor_button"]
margin_left = 35.0
margin_top = 25.0
margin_right = 55.0
margin_bottom = 45.0
color = Color( 0, 0, 0, 1 )

[node name="Amount" type="Label" parent="VBoxContainer/Sensors/rain_sensor_button/BG"]
margin_right = 20.0
margin_bottom = 20.0
text = "99"
align = 1
valign = 1
